--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.0.5",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.297.0",
     "next": "14.0.4",
     "react": "^18",
+    "react-datepicker": "^4.24.0",
     "react-dom": "^18",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^2.1.0",
