--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
+    "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
@@ -18,6 +19,7 @@
     "react": "^18",
     "react-datepicker": "^4.24.0",
     "react-dom": "^18",
+    "react-redux": "^9.0.4",
     "react-toastify": "^9.1.3",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7"
